--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@ethersproject/strings": "^5.4.0",
     "@pancakeswap/sdk": "^2.4.0",
     "@reduxjs/toolkit": "^1.6.1",
-    "@smartworld-libs/uikit": "^0.58.1",
+    "@smartworld-libs/uikit": "^0.60.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,11 +17,13 @@
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/walletconnect-connector": "^6.2.4",
+    "@web3-react/walletconnect-connector": "6.2.4",
+    "chart.js": "^3.7.1",
     "d3": "^7.0.1",
     "ethers": "^5.4.6",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.2.1",
     "react-globe.gl": "^2.18.10",
