--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ REACT_APP_NAME=$npm_package_name
 REACT_APP_BSCSCAN_API=YUG9PY3PKUAIQ3PYVM4YRDWFAI445EBXJ4
 REACT_APP_NOMICS_API=fcd3ca9de38841b8c8c79735a48ab5296fcb9a50 
 
+SKIP_PREFLIGHT_CHECK=true
+
 REACT_APP_NODE_1 = "https://bsc-dataseed1.ninicoin.io"
 REACT_APP_NODE_2 = "https://bsc-dataseed1.ninicoin.io"
 REACT_APP_NODE_3 = "https://bsc-dataseed1.ninicoin.io"
