--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@binance-chain/bsc-connector": "^1.0.0",
     "@ethersproject/strings": "^5.4.0",
     "@pancakeswap/sdk": "^2.4.0",
+    "@react-three/drei": "^8.8.4",
+    "@react-three/fiber": "^7.0.26",
     "@reduxjs/toolkit": "^1.6.1",
-    "@smartworld-libs/uikit": "^0.60.0",
+    "@smartworld-libs/uikit": "^0.61.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -37,8 +39,10 @@
     "react-window": "^1.8.6",
     "redux-localstorage-simple": "^2.4.1",
     "styled-components": "^5.3.1",
+    "three": "^0.137.5",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "wouter": "^2.8.0-alpha.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -70,8 +74,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-reconciler": "^0.26.4",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-window": "^1.8.5",
-    "@types/styled-components": "^5.1.14"
+    "@types/styled-components": "^5.1.14",
+    "@types/three": "^0.137.0",
+    "react-reconciler": "^0.26.2"
   }
 }
