--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@react-three/drei": "^8.8.4",
     "@react-three/fiber": "^7.0.26",
     "@reduxjs/toolkit": "^1.6.1",
-    "@smartworld-libs/uikit": "^0.62.2",
+    "@smartworld-libs/uikit": "^0.63.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -38,6 +38,8 @@
     "react-spring": "^9.4.3",
     "react-window": "^1.8.6",
     "redux-localstorage-simple": "^2.4.1",
+    "seamless-scroll-polyfill": "^2.1.8",
+    "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^5.3.1",
     "three": "^0.137.5",
     "typescript": "^4.1.2",
