--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@react-three/drei": "^8.8.4",
     "@react-three/fiber": "^7.0.26",
     "@reduxjs/toolkit": "^1.6.1",
-    "@smartworld-libs/uikit": "^0.64.3",
+    "@smartworld-libs/uikit": "0.65.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
